<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ll_activity_line_graph"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_activity_line_graph"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart_activity_line_graph"
                android:layout_width="match_parent"
                android:contentDescription="@string/graph_content_description"
                android:layout_height="match_parent">
            </com.github.mikephil.charting.charts.LineChart>

        </FrameLayout>

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:contentPadding="16dp"
                card_view:cardElevation="2dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2" >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/on_click_name"
                            android:layout_weight="1"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/name"
                            android:layout_weight="1"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/marketcap"
                            android:layout_weight="1"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/marketcap"
                            android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/dayLow"
                            android:layout_weight="1"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/day_low"
                            android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/dayHigh"
                            android:layout_weight="1"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/day_high"
                            android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/yearLow"
                            android:layout_weight="1"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/year_low"
                            android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/yearHigh"
                            android:layout_weight="1"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/year_high"
                            android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/quarterlyEstimate"
                            android:layout_weight="1"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/quarterly_estimate"
                            android:layout_weight="1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/yearlyEstimate"
                            android:layout_weight="1"/>


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/yearly_estimate"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
